--- a/ms_experiment_final.ipynb
+++ b/ms_experiment_final.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "64c52027",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import proteomics as ps"
+    "import proteomics as ps\n",
+    "from proteomics.cleavage_patterns import enzyme_cleavage_patterns"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "3b6d0f15",
    "metadata": {},
    "outputs": [
@@ -30,7 +31,7 @@
        "3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,25 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f09b747e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'proteomics' has no attribute 'digest_protein_collection'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m digested_proteins \u001b[38;5;241m=\u001b[39m \u001b[43mps\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdigest_protein_collection\u001b[49m(proteins, enzyme_cleavage_patterns[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLysC\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'proteomics' has no attribute 'digest_protein_collection'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "digested_proteins = ps.digest_protein_collection(proteins, enzyme_cleavage_pattern['LysC'])"
+    "digested_proteins = ps.digest_protein_collection(proteins, enzyme_cleavage_patterns['LysC'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ce201bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
