--- a/ms_experiment_final.ipynb
+++ b/ms_experiment_final.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "3b6d0f15",
    "metadata": {},
    "outputs": [
@@ -32,13 +32,13 @@
        "3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "proteins = ps.read_fasta(\"C:\\\\Users\\\\Celine\\Desktop\\\\University\\\\S5\\\\advanced-python_course\\\\Proteosom\\\\data\\\\sample_proteins.fasta\")\n",
+    "proteins = ps.read_fasta(\"data/sample_proteins.fasta\")\n",
     "len(proteins)"
    ]
   },
